Output: pipeline fix